@@ -35,7 +35,6 @@ import static org.assertj.core.api.Assertions.fail;
 
 import java.util.AbstractMap.SimpleEntry;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.Map.Entry;
@@ -766,7 +765,7 @@ public class SingletonRaftGroupTest extends BaseTest {
         group.waitUntilLeaderElected();
 
         eventually(() -> {
-            for (RaftNodeImpl node : Arrays.asList(newNode, restoredNode)) {
+            for (RaftNodeImpl node : List.of(newNode, restoredNode)) {
                 int newTerm = node.getTerm().getTerm();
                 assertThat(newTerm).isGreaterThan(term);
 
@@ -812,7 +811,7 @@ public class SingletonRaftGroupTest extends BaseTest {
         group.waitUntilLeaderElected();
 
         eventually(() -> {
-            for (RaftNodeImpl node : Arrays.asList(newNode, restoredNode)) {
+            for (RaftNodeImpl node : List.of(newNode, restoredNode)) {
                 int newTerm = node.getTerm().getTerm();
                 assertThat(newTerm).isGreaterThan(term);
 
@@ -861,7 +860,7 @@ public class SingletonRaftGroupTest extends BaseTest {
         group.waitUntilLeaderElected();
 
         eventually(() -> {
-            for (RaftNodeImpl node : Arrays.asList(newNode, restoredNode)) {
+            for (RaftNodeImpl node : List.of(newNode, restoredNode)) {
                 int newTerm = node.getTerm().getTerm();
                 assertThat(newTerm).isGreaterThan(term);
 
